# ECLipsE

./: .gitignore  ECLipsE.m  ECLipsE_Fast.m  LipConstEstimator_demo.ipynb  Lip_estimates.m  README.md  TRANSLATION_SUMMARY.md  demo.py  demo_gen_local.py  example_usage.py  generate_random_weights.py  load_weights.m  pyproject.toml  test_merged_estimator.py
.ipynb_checkpoints/: LipConstEstimator_demo-checkpoint.ipynb  demo-checkpoint.py
ECLipsE_Gen_Local/: ActvSlopeRange.m  ActvSlopeRange_one_global.m  Get_Lip_estimates.m  find_good_Lambdas.m  load_weights.m  main.m
ECLipsE_Gen_Local/utils/: elu.m  leakyrelu.m  sigmoid.m  silu.m  softplus.m  swish.m
ECLipsE_Gen_Local_matlab/: ActvSlopeRange_one_global.m  Get_Lip_estimates.m  find_good_Lambdas.m  main.m
ECLipsE_Gen_Local_matlab/utils/: silu.m  softplus.m
ECLipsE_Gen_Local_paper/: ActvSlopeRange.m  Get_Lip_estimates.m  load_weights.m
ECLipsE_Gen_Local_paper/utils/: elu.m  leakyrelu.m  swish.m
ECLipsE_matlab/: ECLipsE.m  ECLipsE_Fast.m  Lip_estimates.m  generate_random_weights.py  load_weights.m  training_MNIST.py
data_generation/: MNIST_attack.py  generate_random_ECLipsE_Gen_Local.py  training_mnist_jacreg.py
datasets/random/: readme.txt
datasets_ECLipsE_Gen_Local/random/: lyr10n10.mat  lyr15n10.mat  lyr25n40.mat  lyr30n100.mat  lyr30n120.mat  (+8 more)
matlab/: ECLipsE.m  ECLipsE_Fast.m  Lip_estimates.m  generate_random_weights.py  training_MNIST.py
python/: LipConstEstimator.py  demo.py  eclipsE.py  eclipsE_fast.py  eclipseE.py  eclipseE_fast.py  extract_model_info.py  generate_weights.py  lipestimate.py
(+42 files in other folders)
